2010-11-15  Raúl Mateos  <raulofpandora@gmail.com>

	* include/functions_events.php: Show text in Agent detail when no events
	found. Commented old code.

2010-11-15  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/estado_ultimopaquete.php: fixed the single quote instead
	double quote.

2010-11-15  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/javascript/tiny_mce/plugins/table/editor_plugin.js,
	include/javascript/tiny_mce/plugins/advlink/editor_plugin.js,
	include/javascript/tiny_mce/plugins/fullscreen/editor_plugin.js,
	include/javascript/tiny_mce/plugins/template/editor_plugin.js,
	include/javascript/tiny_mce/themes/advanced/editor_template.js: fixed end of
	lines that it haven't semicolon end char.

2010-11-15  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_extensions.php: added functions
	"add_extension_godmode_tab_agent" and "add_extension_opemode_tab_agent" to
	add the extensions tab in the header in operation and godmode.
	
	* operation/agentes/ver_agente.php,
	godmode/agentes/configurar_agente.php: added hook for to add the extension
	tabs.

2010-11-14  Junichi Satoh  <junichi@rworks.jp>

	* operation/agentes/status_monitor.php: Fixed unnecessary strings
	(a part of html entities) are shown in module name.

2010-11-11  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/javascript/jquery.ui.datepicker.js,
	include/javascript/pandora_modules.js,
	include/javascript/tiny_mce/plugins/autoresize/editor_plugin.js,
	include/javascript/tiny_mce/plugins/example/editor_plugin.js,
	include/javascript/tiny_mce/plugins/emotions/editor_plugin.js,
	include/javascript/tiny_mce/plugins/advhr/editor_plugin.js,
	include/javascript/tiny_mce/plugins/advlist/editor_plugin.js,
	include/javascript/tiny_mce/plugins/advimage/editor_plugin.js,
	include/javascript/tiny_mce/plugins/advimage/js/image.js,
	include/javascript/tiny_mce/plugins/directionality/editor_plugin.js,
	include/javascript/tiny_mce/plugins/visualchars/editor_plugin.js,